# service/system/model/usermodel_gen.go
@@ -1,6 +1,6 @@
 // Code generated by goctl. DO NOT EDIT.
 // versions:
-//  goctl version: 1.7.3
+//  goctl version: 1.10.1
 
 package model
 
@@ -43,13 +43,13 @@ type (
 	}
 
 	User struct {
-		UserId     string         `db:"user_id"`
-		Username   string         `db:"username"`
-		Password   string         `db:"password"`
-		Email      sql.NullString `db:"email"`
-		Gender     int64          `db:"gender"`
-		CreateTime time.Time      `db:"create_time"`
-		UpdateTime time.Time      `db:"update_time"`
+		UserId     string    `db:"user_id"`
+		Username   string    `db:"username"`
+		Password   string    `db:"password"`
+		Email      string    `db:"email"`
+		Gender     int64     `db:"gender"`
+		CreateTime time.Time `db:"create_time"`
+		UpdateTime time.Time `db:"update_time"`
 	}
 )
 
